<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        style="@style/title_purple" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="24sp"
        style="@style/title_purple"
        android:layout_marginTop="24dp"
        android:padding="16dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:text="@string/olaradio"
        android:layout_height="70sp"
        tools:visibility="visible"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:layout_gravity="center"
        android:text="@string/olacheckbox"
        android:textAlignment="center" />



</LinearLayout>
