<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/titleTXT"
        style="@style/title_purple"
        android:text="IMC"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        tools:visibility="visible"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/pesoEDT"
        android:layout_width="match_parent"
        android:hint="@string/hint_peso"
        android:layout_height="wrap_content"
        style="@style/input_style"
        android:layout_marginHorizontal="24dp"
        android:layout_below="@id/titleTXT"
        />

    <EditText
        android:id="@+id/alturaEDT"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/hint_altura"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:visibility="visible"
        android:layout_alignStart="@id/pesoEDT"
        android:layout_alignEnd="@id/pesoEDT"
        android:layout_below="@id/pesoEDT"
        />

    <Button
        android:id="@+id/calcularBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alturaEDT"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="356dp"
        android:padding="15dp"
        android:text="@string/text_calcular"
        android:textAlignment="center"
        tools:visibility="visible" />


</RelativeLayout>